Fix homepage text about modset

--- a/apps/legacy/src/app/views/pages/home.hbs
+++ b/apps/legacy/src/app/views/pages/home.hbs
@@ -104,11 +104,11 @@
                 <div class="col-md-7">
                     <h1 class="display-4 text-primary">Our take on Milsim</h1>
                     <p class="lead">While we do enjoy a realistic simulation, we simplify it where it does not benefit
-                        our gameplay. Player experience is more important than real life military procedures. Therefore
+                        our gameplay. Player experience is more important than real life military procedures. Therefore,
                         we do not use a ranking system and unnecessarily strict discipline. We use a modified basic
-                        medical system (modified ACE Basic Medical). On the other hand we only allow first person
-                        perspective and regulate equipment to facilitate team play. Furthermore we do not have dedicated
-                        roles. Instead we trust in our members to take roles they are capable of fulfilling by
+                        medical system (modified ACE Basic Medical). On the other hand we only allow first-person
+                        perspective and regulate equipment to facilitate team play. Furthermore, we do not have dedicated
+                        roles. Instead, we trust in our members to take roles they are capable of fulfilling by
                         themselves, aided by our Training System. We are mainly infantry-focused, but not limited
                         to.</p>
                 </div>
@@ -126,10 +126,10 @@
         <div class="container">
             <h1 class="display-4 text-center text-primary">Our Resources</h1>
             <p class="lead">The unit has multiple resources at its disposal to ensure smooth operations. These resources
-                include: a dedicated Arma 3 server as well as a custom made bot for general unit administration. The
+                include: a dedicated Arma 3 server as well as a custom-made bot for general unit administration. The
                 unit also makes use of a carefully tailored modset to enhance the gameplay experience for the community.
                 These mods (Totaling around 50GB) include but are not limited to: ACRE2, ACE3, RHS Escalation as
-                well as a number of smaller and custom made mods designed to bring out the best experience.</p>
+                well as a number of smaller and custom-made mods designed to bring out the best experience.</p>
         </div>
     </div>
 </div>
@@ -143,8 +143,8 @@
                 </div>
                 <div class="col-md-9 align-self-center">
                     <div class="card-body">
-                        <h5 class="card-title text-primary">Arma3Sync repository</h5>
-                        <p class="card-text">We are using Arma3 Sync and our own repository for easy mod distribution
+                        <h5 class="card-title text-primary">Steam workshop</h5>
+                        <p class="card-text">We are using the Steam workshop for easy mod distribution
                             and update management.</p>
                     </div>
                 </div>
@@ -206,7 +206,7 @@
                     <p class="lead">We are looking for mature people who share our enthusiasm for overcoming challenges
                         by team play and tactics. That requires a basic willingness to improve. The key is improvement,
                         we do not expect any previous experience, we will gladly support each other on our journey
-                        forward. In addition we expect an average attendance of once per week or a leave of absence.</p>
+                        forward. In addition, we expect an average attendance of once per week or a leave of absence.</p>
                     <p class="lead">Communication and capacity for teamwork are crucial. Every new member will undergo a
                         mentoring program where he will be taught the basic on how we operate. At the end of a trial
                         period, each Recruit has to complete our Infantry Qualification Course to become a full
