Fix teamspeak URL

--- a/apps/legacy/src/app/views/pages/home.hbs
+++ b/apps/legacy/src/app/views/pages/home.hbs
@@ -255,7 +255,7 @@
                 to learn more about our procedures and tactics. We are looking forward to your visit!</p>
 
             <div class="d-flex justify-content-evenly">
-                <a type="button" class="btn btn-secondary btn-lg" href="ts3server://ts.7th-ranger.com?port=9375">
+                <a type="button" class="btn btn-secondary btn-lg" href="ts3server://ts.7th-ranger.com">
                     <i class="fa-brands fa-teamspeak"></i>
                     Join our TeamSpeak
                 </a>
