--- a/apps/legacy/src/app/views/partials/navbar.hbs
+++ b/apps/legacy/src/app/views/partials/navbar.hbs
@@ -53,7 +53,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="ts3server://ts.7th-ranger.com?port=9375">
+                    <a class="nav-link" href="ts3server://ts.7th-ranger.com">
                         <i class="fa-brands fa-teamspeak fa-lg fa-fw"></i>
                         <span class="d-lg-none">Teamspeak</span>
                     </a>
